--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -285,7 +286,7 @@
             cursor: pointer;
         }
 
-        /* Events tab styling */
+        Events tab styling
         .filter-bar {
             padding: 16px;
             background-color: #fff;
@@ -946,37 +947,6 @@
 
     <!-- Main Content Area -->
     <main>
-        <!-- Community Tab -->
-        <div class="tab-content" id="community-tab">
-            <!-- Stories Section -->
-            <div class="stories-section">
-                <div class="story-item">
-                    <div class="story-circle story-add">
-                        <i class="fas fa-plus"></i>
-                    </div>
-                    <span class="story-label">Add</span>
-                </div>
-                <div class="story-item">
-                    <div class="story-circle story-regular"></div>
-                    <span class="story-label">Innovation</span>
-                </div>
-                <div class="story-item">
-                    <div class="story-circle story-regular"></div>
-                    <span class="story-label">Tech</span>
-                </div>
-                <div class="story-item">
-                    <div class="story-circle story-regular"></div>
-                    <span class="story-label">Art</span>
-                </div>
-                <div class="story-item">
-                    <div class="story-circle story-regular"></div>
-                    <span class="story-label">Science</span>
-                </div>
-                <div class="story-item">
-                    <div class="story-circle story-regular"></div>
-                    <span class="story-label">Social</span>
-                </div>
-            </div>
 
             <!-- Create Post Section -->
             <div class="create-post">
@@ -1091,4 +1061,5 @@
                         <div class="event-header">
                             <div>
                                 <h3 class="event-title">Tech Innovation Hackathon</h3>
-                                <p class
+  
+
