--- a/index.html
+++ b/index.html
@@ -397,8 +397,7 @@
 
         <div class="logo-title-wrapper" style="display: flex; align-items: center; gap: 12px;">
             <!-- Circular Logo -->
-            <img src="https://sdmntprcentralus.oaiusercontent.com/files/00000000-610c-61f5-a698-ec9df9eeeeba/raw?se=2025-05-17T11%3A35%3A07Z&sp=r&sv=2024-08-04&sr=b&scid=00000000-0000-0000-0000-000000000000&skoid=71e8fa5c-90a9-4c17-827b-14c3005164d6&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-05-17T01%3A32%3A29Z&ske=2025-05-18T01%3A32%3A29Z&sks=b&skv=2024-08-04&sig=GTGXQm5FKKYStDE9AHv34XGAMmHk/pWbjHaMI0cfEyY%3D"
-                alt="Logo" style="width: 60px; height: 60px; border-radius: 50%;">
+            <img src="logo.png" alt="Logo" style="width: 60px; height: 60px; border-radius: 50%;">
 
             <!-- App Title -->
             <h1 class="app-title">Socionet</h1>
